# gemma3-qa-finetuning

./: .env.example  .gitignore  README.md  inference_example.py  pyproject.toml
data/: test_subset.json
gemma-lora-squad-final/: adapter_config.json  adapter_model.safetensors
src/: main.py
src/gemmaqa/: __init__.py  cli.py  config.py  config.yaml  data.py  eval.py  modeling.py  train.py  utils.py
src/gemmaqa/config/: README.md  __init__.py  default.yaml  settings.py
src/gemmaqa/data/: __init__.py  loader.py  prepare.py
src/gemmaqa/evaluation/: __init__.py  evaluation_runner.py  metrics.py
src/gemmaqa/finetuning/: __init__.py  base.py  data.py  freeze.py  full.py  lora.py  prepare_data.py  train.py  trainer.py
src/gemmaqa/inference/: __init__.py  chat.py  eval.py  model.py
src/gemmaqa/utils/: __init__.py  cuda.py  cuda_check.py  logging.py  seed.py
src/rag/: __init__.py  data.py  rag.py
